--- a/src/components/PizzaItem/PizzaItem.css
+++ b/src/components/PizzaItem/PizzaItem.css
@@ -3,3 +3,15 @@
   width: 250px;
   height: 400px;
 }
+
+.pizza-description {
+  background-color: #ed2929;
+}
+
+.pizza-price {
+  text-align: right;
+}
+
+.add-remove {
+  text-align: center;
+}
