--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,8 +3,8 @@
 }
 
 .App-header {
-  background-color: #222;
-  height: 70px;
+  background-color: rgb(221, 129, 44);
+  height: 80px;
   padding: 20px;
   color: white;
   margin-bottom: 20px;
