--- a/src/components/PizzaItem/PizzaItem.css
+++ b/src/components/PizzaItem/PizzaItem.css
@@ -1,11 +1,13 @@
 .pizza-item {
   display: inline-block;
   width: 250px;
-  height: 400px;
+  height: 500px;
 }
 
 .pizza-description {
   background-color: #ed2929;
+  width: 250px;
+  height: 200px;
 }
 
 .pizza-price {
@@ -14,4 +16,6 @@
 
 .add-remove {
   text-align: center;
+  width: 250px;
+  height: 100px;
 }
