--- a/src/components/PizzaItem/PizzaItem.css
+++ b/src/components/PizzaItem/PizzaItem.css
@@ -1,23 +1,40 @@
 .pizza-item {
   display: inline-block;
-  width: 250px;
-  height: 450px;
-  margin: 10px;
+  width: 300px;
+  height: 440px;
+  margin: 10px 10px 100px 10px;
+}
+
+.no-margin {
+  margin: 0;
+}
+
+.pizza-item img {
+  border: 1px solid #000000;
 }
 
 .pizza-description {
-  background-color: #ed2929;
-  width: 250px;
-  height: 200px;
+  background-color: #2c87dd98;
+  width: 280px;
+  height: 160px;
+  padding: 10px;
+  border-left: 1px solid #000000;
+  border-right: 1px solid #000000;
 }
 
 .pizza-price {
   text-align: right;
+  background-color: #2c87dd98;
+  width: 280px;
+  height: 30px;
+  padding: 10px;
+  border-left: 1px solid #000000;
+  border-right: 1px solid #000000;
 }
 
 .add-remove {
   text-align: center;
-  width: 250px;
-  height: 50px;
+  width: 300px;
+  height: 48px;
   border: 1px solid #000000;
 }
