--- a/src/components/PizzaItem/PizzaItem.css
+++ b/src/components/PizzaItem/PizzaItem.css
@@ -38,3 +38,12 @@
   height: 48px;
   border: 1px solid #000000;
 }
+
+.next-button {
+  margin-bottom: 50px;
+  width: 100px;
+  height: 50px;
+  font-size: 24px;
+  /* background-color: #2c87dd98; */
+  border-radius: 10px;
+}
