--- a/src/components/PizzaItem/PizzaItem.css
+++ b/src/components/PizzaItem/PizzaItem.css
@@ -44,6 +44,6 @@
   width: 100px;
   height: 50px;
   font-size: 24px;
-  /* background-color: #2c87dd98; */
+  background-color: #2c87dd98;
   border-radius: 10px;
 }
